Add structure and partials

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,13 @@
 @import "core/variables";
 @import "core/reset";
+@import "layout/header";
+@import "layout/beige-main";
+@import "layout/mixed-main";
+@import "layout/footer";
 
 /* 
 @import 'components/code';
 @import 'components/links';
 @import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
 @import 'pages/index';
 */
