--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,16 +1,32 @@
-<header>
-  <img src="./assets/images/hamburger.png" alt="Menú de hamburguesa" />
-  <img src="./assets/images/logo.png" alt="Logo de Open Spaces" />
-  <nav>
-    <ul>
+<header class="header">
+  <ul class="start">
+    <li>
+      <a href="https://www.adalab.es/"
+        ><img
+          class="start__hamburguer"
+          src="./assets/images/hamburger.png"
+          alt="Menú de hamburguesa"
+      /></a>
+    </li>
+  </ul>
+  <nav class="menu">
+    <ul class="menu__list">
       <li>Productos</li>
       <li>Colecciones</li>
       <li>Tienda</li>
       <li>Inicio</li>
     </ul>
   </nav>
-  <section>
-    <h1>Disfruta creando espacios</h1>
-    <button><a src="#">Comprar Ahora</a></button>
-  </section>
+  <article class="spaces">
+    <a class="spaces__icon" href="./index.html" title="Página principal"
+      ><img src="./assets/images/logo.png" alt="Logo de Open Spaces"
+    /></a>
+    <div class="header-wrapper">
+      <h1 class="title">Disfruta creando espacios</h1>
+
+      <button class="title__button">
+        <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
+      </button>
+    </div>
+  </article>
 </header>
