--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,6 @@
 // colors
 $beige-background: #f0ebe5;
 $salmon-background: #ff975a;
-$turquoise-background: #0c474b;
-$turquoise-text: #0c474b;
+$turquoise: #0c474b;
 $blue-grey-text: #b6c8c9;
 $white-text: #ffffff;
