--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,14 +1,10 @@
 <header class="header">
-  <ul class="start">
-    <li>
-      <a href="https://www.adalab.es/"
-        ><img
-          class="start__hamburguer"
-          src="./assets/images/hamburger.png"
-          alt="Menú de hamburguesa"
-      /></a>
-    </li>
-  </ul>
+  <a class="start" href="https://www.adalab.es/"
+    ><img
+      class="start__hamburguer"
+      src="./assets/images/hamburger.png"
+      alt="Menú de hamburguesa"
+  /></a>
   <nav class="menu">
     <ul class="menu__list">
       <li>Productos</li>
@@ -21,12 +17,10 @@
     <a class="spaces__icon" href="./index.html" title="Página principal"
       ><img src="./assets/images/logo.png" alt="Logo de Open Spaces"
     /></a>
-    <div class="header-wrapper">
-      <h1 class="title">Disfruta creando espacios</h1>
+    <h1 class="title">Disfruta creando espacios</h1>
 
-      <button class="title__button">
-        <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
-      </button>
-    </div>
+    <button class="title__button">
+      <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
+    </button>
   </article>
 </header>
