Add styles to first main partial

--- a/src/html/partials/beige-main.html
+++ b/src/html/partials/beige-main.html
@@ -1,18 +1,27 @@
-<section>
-  <h2>Volverse organizado se siente mejor con OPEN SPACES</h2>
-  <article>
+<section class="beige-main">
+  <h2 class="open-title">
+    Volverse organizado se siente mejor con
+    <span class="open-title__size-title">open spaces</span>
+  </h2>
+  <article class="beige-article">
     <img src="./assets/images/icon_1.png" alt="Mesa de café con jarrones" />
-    <h3>Lo que necesitas</h3>
-    <p>Una línea de productos diseñados para todos tus espacios</p>
+    <h3 class="beige-article__beige-title">Lo que necesitas</h3>
+    <p class="beige-article__beige-title--beige-text">
+      Una línea de productos diseñados para todos tus espacios
+    </p>
   </article>
-  <article>
+  <article class="beige-article">
     <img src="./assets/images/icon_2.png" alt="Bolsa con icono de reciclaje" />
-    <h3>Materias primas sustentables</h3>
-    <p>Todos los productos con materias primas sustentables</p>
+    <h3 class="beige-article__beige-title">Materias primas sustentables</h3>
+    <p class="beige-article__beige-title--beige-text">
+      Todos los productos con materias primas sustentables
+    </p>
   </article>
-  <article>
+  <article class="beige-article">
     <img src="./assets/images/icon_3.png" alt="Menú en caballete" />
-    <h3>Guía</h3>
-    <p>Soporte y asesoramiento para ayudarte con tu objetivo</p>
+    <h3 class="beige-article__beige-title">Guía</h3>
+    <p class="beige-article__beige-title--beige-text">
+      Soporte y asesoramiento para ayudarte con tu objetivo
+    </p>
   </article>
 </section>
