--- a/src/html/partials/mixed-main.html
+++ b/src/html/partials/mixed-main.html
@@ -1,14 +1,22 @@
-<section>
-  <article>
+<section class="mixed-main">
+  <article class="pumpkin-article">
     <img src="./assets/images/icon_4.png" alt="Furgoneta de reparto" />
-    <h2>Envío gratis garantizado</h2>
-    <p>Envío gratis en compras desde 100</p>
-    <a src="#">Comprar ahora</a>
+    <h2 class="pumpkin-article__pumpkin-title">Envío gratis garantizado</h2>
+    <p class="pumpkin-article__pumpkin-title--pumpkin-text">
+      Envío gratis en compras desde 100
+    </p>
+    <a class="pumpkin-article__pumpkin-title--pumpkin-link" href="#"
+      >Comprar ahora</a
+    >
   </article>
-  <article>
-    <h2>Disfruta creando espacios</h2>
-    <p>Una línea de productos diseñados para todos tus espacios</p>
-    <button><a src="#">Comprar Ahora</a></button>
+  <article class="mixed-article">
+    <h2 class="mixed-article__mixed-title">Disfruta creando espacios</h2>
+    <p class="mixed-article__mixed-title--mixed-text">
+      Una línea de productos diseñados para todos tus espacios
+    </p>
+    <button class="mixed-button">
+      <a class="mixed-button__mixed-link" href="#">Comprar ahora</a>
+    </button>
   </article>
   <img
     src="./assets/images/creando-espacios.jpg"
