Add footer styles

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,17 +1,18 @@
-<footer>
-    <h4>Tienda</4>
-      <nav>
-        <ul>
-          <li>Productos</li>
-          <li>Cajoneras</li>
-          <li>Para toda la casa</li>
-          <li>Habitaciones</li>
-        </ul>
-      </nav>
+<footer class="footer">
+  <section class="footer__footer-section">
+    <h4>Tienda</h4>
+    <nav>
+      <ul class="footer-list">
+        <li>Productos</li>
+        <li>Cajoneras</li>
+        <li>Para toda la casa</li>
+        <li>Habitaciones</li>
+      </ul>
+    </nav>
     <h4>Nosotros</h4>
     <nav>
-      <ul>
-        <li>Nuetra Guía</li>
+      <ul class="footer-list">
+        <li class="footer-list__li-size">Nuetra guía</li>
         <li>Nuestro diseño</li>
         <li>Nuestra historia</li>
         <li>Ayuda</li>
@@ -19,13 +20,29 @@
     </nav>
     <h4>Contacto</h4>
     <nav>
-      <ul>
+      <ul class="footer-list">
         <li>ayuda@openspaces.com</li>
         <li>Socios</li>
-        <li><i class="fa-brands fa-linkedin-in">Linkedin</i></li>
-        <li><i class="fa-brands fa-instagram">Instagram</i></li>
-        <li><i class="fa-brands fa-twitter">Twitter</i></li>
       </ul>
     </nav>
-    <a src="./index.html" title="Subir al inicio de la página"><img src="./assets/images/arrow.png" alt="Flecha hacia arriba"></a>
-  </footer>
+    <nav>
+      <ul class="social-list">
+        <li class="social-list__social-media">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </li>
+        <li class="social-list__social-media">
+          <i class="fa-brands fa-instagram"></i>
+        </li>
+        <li class="social-list__social-media">
+          <i class="fa-brands fa-twitter"></i>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  <a class="arrow-link" href="./index.html" title="Subir al inicio de la página"
+    ><img
+      class="arrow-link__arrow"
+      src="./assets/images/arrow.png"
+      alt="Flecha hacia arriba"
+  /></a>
+</footer>
