--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <section class="footer__footer-section">
-    <h4>Tienda</h4>
+    <h4 class="footer-title">Tienda</h4>
     <nav>
       <ul class="footer-list">
         <li>Productos</li>
@@ -9,7 +9,7 @@
         <li>Habitaciones</li>
       </ul>
     </nav>
-    <h4>Nosotros</h4>
+    <h4 class="footer-title">Nosotros</h4>
     <nav>
       <ul class="footer-list">
         <li class="footer-list__li-size">Nuetra guía</li>
@@ -18,7 +18,7 @@
         <li>Ayuda</li>
       </ul>
     </nav>
-    <h4>Contacto</h4>
+    <h4 class="footer-title">Contacto</h4>
     <nav>
       <ul class="footer-list">
         <li>ayuda@openspaces.com</li>
