--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -11,11 +11,16 @@
   }
 }
 
-// Footer list
+// Footer title + list elements
+
+.footer-title {
+  font-size: 20px;
+}
 
 .footer-list {
   list-style: none;
   padding: 12px 0 20px;
+  font-size: 12px;
 
   &__li-size {
     text-transform: capitalize;
