--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -5,22 +5,25 @@
       src="./assets/images/hamburger.png"
       alt="Menú de hamburguesa"
   /></a>
-  <nav class="menu">
-    <ul class="menu__list">
-      <li>Productos</li>
-      <li>Colecciones</li>
-      <li>Tienda</li>
-      <li>Inicio</li>
-    </ul>
-  </nav>
   <article class="spaces">
-    <a class="spaces__icon" href="./index.html" title="Página principal"
-      ><img src="./assets/images/logo.png" alt="Logo de Open Spaces"
-    /></a>
-    <h1 class="title">Disfruta creando espacios</h1>
-
-    <button class="title__button">
-      <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
-    </button>
+    <div class="spaces-menu">
+      <nav class="menu">
+        <ul class="menu__list">
+          <li>Productos</li>
+          <li>Colecciones</li>
+          <li>Tienda</li>
+          <li>Inicio</li>
+        </ul>
+      </nav>
+      <a class="spaces__icon" href="./index.html" title="Página principal"
+        ><img src="./assets/images/logo.png" alt="Logo de Open Spaces"
+      /></a>
+    </div>
+    <div class="ipad-spaces">
+      <h1 class="title">Disfruta creando espacios</h1>
+      <button class="title__button">
+        <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
+      </button>
+    </div>
   </article>
 </header>
