--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -17,19 +17,42 @@
     width: 24px;
     height: 24px;
     margin: 55px 0 0 33px;
+
+    @media all and (min-width: 900px) {
+      margin: 75px 0 0 82px;
+    }
+
+    @media all and (min-width: 1728px) {
+      display: none;
+    }
   }
 }
 
 // Menú de inicio
 
+.spaces-menu {
+  @media all and (min-width: 1728px) {
+    display: flex;
+    align-items: center;
+    margin-left: -400px;
+  }
+}
+
 .menu {
   display: none;
+  padding-right: 81px;
+
+  @media all and (min-width: 1728px) {
+    display: flex;
+  }
 
   &__list {
     display: flex;
     gap: 30px;
     list-style: none;
     text-decoration: none;
+    color: $turquoise;
+    font-size: 16px;
   }
 }
 
@@ -40,6 +63,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+
+  @media all and (min-width: 900px) {
+    padding-top: 39px;
+  }
 
   &__icon {
     height: 96px;
@@ -47,12 +75,35 @@
     padding-left: 45px;
   }
 }
+
+@media all and (min-width: 900px) {
+  .ipad-spaces {
+    text-align: left;
+    margin-left: -147px;
+    width: 430px;
+  }
+}
+
+@media all and (min-width: 1728px) {
+  .ipad-spaces {
+    margin-left: -673px;
+  }
+}
+
 .title {
   font-size: 24px;
   color: $turquoise;
   font-weight: 600;
   padding-top: 160px;
   padding-bottom: 24px;
+
+  @media all and (min-width: 900px) {
+    font-size: 36px;
+  }
+
+  @media all and (min-width: 1728px) {
+    padding-top: 400px;
+  }
 
   &__button {
     font-weight: 600;
