Changes first main responsive

--- a/src/html/partials/beige-main.html
+++ b/src/html/partials/beige-main.html
@@ -1,8 +1,10 @@
 <section class="beige-main">
-  <h2 class="open-title">
-    Volverse organizado se siente mejor con
-    <span class="open-title__size-title">open spaces</span>
-  </h2>
+  <div class="grid-title">
+    <h2 class="open-title">
+      Volverse organizado se siente mejor con
+      <span class="open-title__size-title">open spaces</span>
+    </h2>
+  </div>
   <div class="grid-articles">
     <article class="beige-article">
       <img
