Add second main responsive

--- a/src/html/partials/mixed-main.html
+++ b/src/html/partials/mixed-main.html
@@ -1,6 +1,10 @@
 <section class="mixed-main">
   <article class="pumpkin-article">
-    <img src="./assets/images/icon_4.png" alt="Furgoneta de reparto" />
+    <img
+      class="car"
+      src="./assets/images/icon_4.png"
+      alt="Furgoneta de reparto"
+    />
     <h2 class="pumpkin-article__pumpkin-title">Envío gratis garantizado</h2>
     <p class="pumpkin-article__pumpkin-title--pumpkin-text">
       Envío gratis en compras desde 100
@@ -9,17 +13,22 @@
       >Comprar ahora</a
     >
   </article>
-  <article class="mixed-article">
-    <h2 class="mixed-article__mixed-title">Disfruta creando espacios</h2>
-    <p class="mixed-article__mixed-title--mixed-text">
-      Una línea de productos diseñados para todos tus espacios
-    </p>
-    <button class="mixed-button">
-      <a class="mixed-button__mixed-link" href="#">Comprar ahora</a>
-    </button>
-  </article>
-  <img
-    src="./assets/images/creando-espacios.jpg"
-    alt="Baño con plano de cestas de rollos de papel y toallas"
-  />
+  <div>
+    <article class="mixed-article">
+      <div class="grid-mixed">
+        <h2 class="mixed-article__mixed-title">Disfruta creando espacios</h2>
+        <p class="mixed-article__mixed-title--mixed-text">
+          Una línea de productos diseñados para todos tus espacios
+        </p>
+        <button class="mixed-button">
+          <a class="mixed-button__mixed-link" href="#">Comprar ahora</a>
+        </button>
+      </div>
+      <img
+        class="bathroom"
+        src="./assets/images/creando-espacios.jpg"
+        alt="Baño con plano de cestas de rollos de papel y toallas"
+      />
+    </article>
+  </div>
 </section>
