Add footer responsive

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,48 +1,55 @@
 <footer class="footer">
   <section class="footer__footer-section">
-    <h4 class="footer-title">Tienda</h4>
-    <nav>
-      <ul class="footer-list">
-        <li>Productos</li>
-        <li>Cajoneras</li>
-        <li>Para toda la casa</li>
-        <li>Habitaciones</li>
-      </ul>
-    </nav>
-    <h4 class="footer-title">Nosotros</h4>
-    <nav>
-      <ul class="footer-list">
-        <li class="footer-list__li-size">Nuetra guía</li>
-        <li>Nuestro diseño</li>
-        <li>Nuestra historia</li>
-        <li>Ayuda</li>
-      </ul>
-    </nav>
-    <h4 class="footer-title">Contacto</h4>
-    <nav>
-      <ul class="footer-list">
-        <li>ayuda@openspaces.com</li>
-        <li>Socios</li>
-      </ul>
-    </nav>
-    <nav>
-      <ul class="social-list">
-        <li class="social-list__social-media">
-          <i class="fa-brands fa-linkedin-in"></i>
-        </li>
-        <li class="social-list__social-media">
-          <i class="fa-brands fa-instagram"></i>
-        </li>
-        <li class="social-list__social-media">
-          <i class="fa-brands fa-twitter"></i>
-        </li>
-      </ul>
-    </nav>
+    <div class="footer-flex">
+      <nav>
+        <h4 class="footer-title">Tienda</h4>
+        <ul class="footer-list">
+          <li>Productos</li>
+          <li>Cajoneras</li>
+          <li>Para toda la casa</li>
+          <li>Habitaciones</li>
+        </ul>
+      </nav>
+      <nav>
+        <h4 class="footer-title">Nosotros</h4>
+        <ul class="footer-list">
+          <li class="footer-list__li-size">Nuetra guía</li>
+          <li>Nuestro diseño</li>
+          <li>Nuestra historia</li>
+          <li>Ayuda</li>
+        </ul>
+      </nav>
+      <nav>
+        <h4 class="footer-title">Contacto</h4>
+        <ul class="footer-list">
+          <li>ayuda@openspaces.com</li>
+          <li>Socios</li>
+          <nav>
+            <ul class="social-list">
+              <li class="social-list__social-media">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </li>
+              <li class="social-list__social-media">
+                <i class="fa-brands fa-instagram"></i>
+              </li>
+              <li class="social-list__social-media">
+                <i class="fa-brands fa-twitter"></i>
+              </li>
+            </ul>
+          </nav>
+        </ul>
+      </nav>
+    </div>
   </section>
-  <a class="arrow-link" href="./index.html" title="Subir al inicio de la página"
-    ><img
-      class="arrow-link__arrow"
-      src="./assets/images/arrow.png"
-      alt="Flecha hacia arriba"
-  /></a>
+  <div class="link-flex">
+    <a
+      class="arrow-link"
+      href="./index.html"
+      title="Subir al inicio de la página"
+      ><img
+        class="arrow-link__arrow"
+        src="./assets/images/arrow.png"
+        alt="Flecha hacia arriba"
+    /></a>
+  </div>
 </footer>
