--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a class="start" href="https://www.adalab.es/"
+  <a class="start" target="blank" href="https://www.adalab.es/"
     ><img
       class="start__hamburguer"
       src="./assets/images/hamburger.png"
@@ -8,10 +8,33 @@
   <article class="spaces">
     <nav class="menu">
       <ul class="menu__list">
-        <li>Productos</li>
-        <li>Colecciones</li>
-        <li>Tienda</li>
-        <li>Inicio</li>
+        <li>
+          <a
+            class="all-links-header"
+            target="blank"
+            href="https://www.adalab.es/"
+            >Productos</a
+          >
+        </li>
+        <li>
+          <a
+            class="all-links-header"
+            target="blank"
+            href="https://www.adalab.es/"
+            >Colecciones</a
+          >
+        </li>
+        <li>
+          <a
+            class="all-links-header"
+            target="blank"
+            href="https://www.adalab.es/"
+            >Tienda</a
+          >
+        </li>
+        <li>
+          <a class="all-links-header" href="https://www.adalab.es/">Inicio</a>
+        </li>
       </ul>
     </nav>
     <a class="spaces__icon" href="./index.html" title="Página principal"
@@ -20,7 +43,9 @@
     <div class="ipad-spaces">
       <h1 class="title">Disfruta creando espacios</h1>
       <button class="title__button">
-        <a class="links" href="https://www.adalab.es/">Comprar ahora</a>
+        <a class="links" target="blank" href="https://www.adalab.es/"
+          >Comprar ahora</a
+        >
       </button>
     </div>
   </article>
