--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -126,12 +126,9 @@
     </div>
   </section>
   <div class="link-flex">
-    <a
-      class="arrow-link"
-      href="./index.html"
-      title="Subir al inicio de la página"
+    <a class="arrow-link" href="./index.html" title="Inicio de la página"
       ><img
-        class="arrow-link__arrow"
+        class="arrow"
         src="./assets/images/arrow.png"
         alt="Flecha hacia arriba"
     /></a>
