--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -38,7 +38,10 @@
       </ul>
     </nav>
     <a class="spaces__icon" href="./index.html" title="Página principal"
-      ><img src="./assets/images/logo.png" alt="Logo de Open Spaces"
+      ><img
+        class="os-logo"
+        src="./assets/images/logo.png"
+        alt="Logo de Open Spaces"
     /></a>
     <div class="ipad-spaces">
       <h1 class="title">Disfruta creando espacios</h1>
