--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -80,10 +80,10 @@
   justify-content: flex-end;
   padding-right: 24px;
   padding-bottom: 16px;
+}
 
-  &__arrow {
-    width: 24px;
-  }
+.arrow {
+  width: 24px;
 }
 
 @media (min-width: 900px) {
