--- a/src/scss/layout/_mixed-main.scss
+++ b/src/scss/layout/_mixed-main.scss
@@ -130,6 +130,8 @@
   &__mixed-link {
     font-size: 16px;
     font-weight: 600;
+    color: $white-text;
+    text-decoration: none;
     text-transform: capitalize;
   }
 }
