--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "components/links";
+@import "components/effects";
 @import "core/variables";
 @import "core/reset";
 @import "layout/header";
