--- a/src/scss/components/_effects.scss
+++ b/src/scss/components/_effects.scss
@@ -27,6 +27,12 @@ button:hover {
   }
 }
 
+// Enlace
+
+.pumpkin-article__pumpkin-title--pumpkin-link:hover {
+  color: #0c474b;
+}
+
 // Arrow logo
 
 .arrow:hover {
