--- a/src/scss/layout/_beige-main.scss
+++ b/src/scss/layout/_beige-main.scss
@@ -32,7 +32,7 @@
 }
 
 .open-title {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: $turquoise;
   padding-top: 41px;
   width: 322px;
@@ -43,7 +43,7 @@
   }
 
   @media (min-width: 1728px) {
-    font-size: 36px;
+    font-size: 2.25rem;
     padding-top: 42px;
     width: 799px;
   }
@@ -75,15 +75,15 @@
 
   &__beige-title {
     padding: 42px 0 12px;
-    font-size: 20px;
+    font-size: 1.25rem;
 
     @media (min-width: 1728px) {
-      font-size: 24px;
+      font-size: 1.5rem;
       padding-bottom: 0;
     }
   }
 
   &__beige-title--beige-text {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
