--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -37,20 +37,20 @@
 // Footer title + list elements
 
 .footer-title {
-  font-size: 20px;
+  font-size: 1.25rem;
 
   @media (min-width: 1728px) {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 }
 
 .footer-list {
   list-style: none;
   padding: 12px 0 20px;
-  font-size: 14px;
+  font-size: 0.875rem;
 
   @media (min-width: 1728px) {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   &__li-size {
