--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -22,7 +22,7 @@
       margin: 75px 0 0 82px;
     }
 
-    @media (min-width: 1728px) {
+    @media (min-width: 1200px) {
       display: none;
     }
   }
@@ -34,7 +34,7 @@
   display: none;
   padding-right: 81px;
 
-  @media (min-width: 1728px) {
+  @media (min-width: 1200px) {
     display: flex;
     position: fixed;
     margin-left: -655px;
@@ -48,6 +48,10 @@
     text-decoration: none;
     color: $turquoise;
     font-size: 1rem;
+
+    @media (min-width: 1728px) {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -64,10 +68,20 @@
     padding-top: 39px;
   }
 
+  @media (min-width: 1728px) {
+    padding-top: 100px;
+  }
+
   &__icon {
     height: 96px;
     text-align: center;
     padding-left: 45px;
+  }
+}
+
+.os-logo {
+  @media (min-width: 1728px) {
+    width: 150%;
   }
 }
 
@@ -79,7 +93,7 @@
   }
 }
 
-@media (min-width: 1728px) {
+@media (min-width: 1200px) {
   .ipad-spaces {
     margin-left: -673px;
   }
@@ -96,8 +110,13 @@
     font-size: 2.25rem;
   }
 
+  @media (min-width: 1200px) {
+    padding-top: 200px;
+  }
+
   @media (min-width: 1728px) {
-    padding-top: 300px;
+    font-size: 3rem;
+    padding-top: 700px;
   }
 
   &__button {
@@ -107,5 +126,9 @@
     text-transform: capitalize;
     padding: 12px 24px;
     border: none;
+
+    @media (min-width: 1728px) {
+      font-size: 1.4rem;
+    }
   }
 }
