--- a/src/scss/layout/_mixed-main.scss
+++ b/src/scss/layout/_mixed-main.scss
@@ -30,13 +30,17 @@
       font-size: 1.875rem;
     }
 
-    @media (min-width: 1728px) {
+    @media (min-width: 1200px) {
       font-size: 2.25rem;
     }
   }
 
   &__pumpkin-title--pumpkin-text {
     font-size: 0.875rem;
+
+    @media (min-width: 1728px) {
+      font-size: 1.1rem;
+    }
   }
 
   &__pumpkin-title--pumpkin-link {
@@ -54,7 +58,7 @@
 
 // Mixed article
 
-@media (min-width: 1728px) {
+@media (min-width: 1200px) {
   .mixed {
     display: flex;
     flex-direction: column;
@@ -69,7 +73,7 @@
     width: 410px;
   }
 
-  @media (min-width: 1728px) {
+  @media (min-width: 1200px) {
     width: 45%;
     display: flex;
     flex-direction: column;
@@ -86,7 +90,7 @@
   display: grid;
   justify-items: center;
 
-  @media (min-width: 1728px) {
+  @media (min-width: 1200px) {
     display: flex;
     padding: 0;
   }
@@ -99,7 +103,7 @@
       font-size: 1.875rem;
     }
 
-    @media (min-width: 1728px) {
+    @media (min-width: 1200px) {
       font-size: 2.25rem;
       width: 430px;
       text-align: left;
@@ -110,11 +114,16 @@
   &__mixed-title--mixed-text {
     font-size: 0.875rem;
 
-    @media (min-width: 1728px) {
+    @media (min-width: 1200px) {
       width: 281px;
       text-align: left;
       font-size: 1rem;
       padding-top: 15px;
+    }
+
+    @media (min-width: 1728px) {
+      width: 350px;
+      font-size: 1.25rem;
     }
   }
 }
@@ -140,7 +149,7 @@
   width: 100vw;
   padding-top: 125px;
 
-  @media (min-width: 1728px) {
+  @media (min-width: 1200px) {
     width: 55%;
     padding: 0;
   }
