--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -98,7 +98,10 @@
                   class="all-links-footer"
                   target="blank"
                   href="https://www.linkedin.com/company/adalab/"
-                  ><img class="social-icons" src="./assets/images/linkedin.png"
+                  ><img
+                    class="social-icons"
+                    src="./assets/images/linkedin.png"
+                    alt="Icono de Linkedin"
                 /></a>
               </li>
               <li class="social-list__social-media">
@@ -109,6 +112,7 @@
                   ><img
                     class="social-icons"
                     src="./assets/images/instagram.png"
+                    alt="Icono de Instagram"
                 /></a>
               </li>
               <li class="social-list__social-media">
@@ -116,7 +120,10 @@
                   class="all-links-footer"
                   target="blank"
                   href="https://twitter.com/Adalab_Digital"
-                  ><img class="social-icons" src="./assets/images/twitter.png"
+                  ><img
+                    class="social-icons"
+                    src="./assets/images/twitter.png"
+                    alt="Icono de Twitter"
                 /></a>
               </li>
             </ul>
