Change grid in 2nd section

--- a/src/html/partials/beige-main.html
+++ b/src/html/partials/beige-main.html
@@ -1,11 +1,9 @@
 <section class="beige-main">
-  <div class="grid-title">
+  <div class="grid-main">
     <h2 class="open-title">
       Volverse organizado se siente mejor con
       <span class="open-title__size-title">open spaces</span>
     </h2>
-  </div>
-  <div class="grid-articles">
     <article class="beige-article">
       <img
         class="icons"
